--- a/src/Soenneker.Stripe.Extensions.Decimals.csproj
+++ b/src/Soenneker.Stripe.Extensions.Decimals.csproj
@@ -14,7 +14,7 @@
         <AssemblyName>Soenneker.Stripe.Extensions.Decimals</AssemblyName>
         <PackageId>Soenneker.Stripe.Extensions.Decimals</PackageId>
         <PackageTags>stripe extensions decimals decimal extension payment processing money currency stripedecimalextension csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2025 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2025-2026 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
